Rebrand of PCF to Pivotal Platform

--- a/docs-content/altoros-heartbeat-scaling.html.md.erb
+++ b/docs-content/altoros-heartbeat-scaling.html.md.erb
@@ -8,7 +8,7 @@ This topic describes how to scale Altoros Heartbeat and how to tune its performa
 
 ## <a id='heartbeat-scaling'></a> Scale Altoros Heartbeat
 
-Below, you will find some examples of resource configuration for PCF installations of different sizes.
+Below, you will find some examples of resource configuration for Pivotal Platform installations of different sizes.
 
 1. 50 Diego cells and 1,000–1,500 apps:
 
@@ -21,7 +21,7 @@ Below, you will find some examples of resource configuration for PCF installatio
 
 ## <a id='heartbeat-tune'></a> Tune Performance of Altoros Heartbeat
 
-Below is a list of performance parameters for PCF installations of different sizes.
+Below is a list of performance parameters for Pivotal Platform installations of different sizes.
 
 1. 50 diego cells and 1000-1500 apps
     * **Storage schema for ... metrics** = `30s:3h,5m:7d,30m:90d`
