--- a/docs-content/integration-with-logsearch.html.md.erb
+++ b/docs-content/integration-with-logsearch.html.md.erb
@@ -1,11 +1,11 @@
 ---
-title: Altoros Log Search for PCF Integration
+title: Altoros Log Search for Pivotal Platform Integration
 owner: Partners
 ---
 
-This topic describes the functionality available to Altoros Heartbeat users upon integration with Altoros Log Search for Pivotal Cloud Foundry (PCF).
+This topic describes the functionality available to Altoros Heartbeat users upon integration with Altoros Log Search for Pivotal Platform.
 
-Integration with [Altoros Log Search for PCF](https://network.pivotal.io/products/altoros-log-search) gives users access to VM
+Integration with [Altoros Log Search for Pivotal Platform](https://network.pivotal.io/products/altoros-log-search) gives users access to VM
 and application logs right from the Grafana interface or by a direct link to the corresponding Kibana dashboard.
 
 
