--- a/docs-content/statsd.html.md.erb
+++ b/docs-content/statsd.html.md.erb
@@ -47,7 +47,7 @@ These metrics are subsequently pushed to Graphite's Carbon component for caching
    For an example, see [this GitHub repository]
 (https://github.com/Altoros/tweets-fetcher/blob/5018d3753dc67c38bb6d89c9fbe6d84cb547b43b/fetcher/fetcher.go#L103).
 
-1. Push the app to Pivotal Cloud Foundry (PCF).
+1. Push the app to Pivotal Platform.
 
 1. Create a custom dashboard in Grafana.
    For a sample dashboard, see [this GitHub repository](https://github.com/Altoros/tweets-fetcher/tree/master/grafana-dashboard).
