--- a/docs-content/services-monitoring.html.md.erb
+++ b/docs-content/services-monitoring.html.md.erb
@@ -9,17 +9,17 @@ This topic describes how to use dashboards for third-party services.
 
 <%= image_tag("images/mysql-dashboard-header.png") %>
 
-1. To track metrics from internal MySQL databases used by PCF Elastic Runtime:
+1. To track metrics from internal MySQL databases used by Pivotal Platform Elastic Runtime:
     1. Open the **Service - MySQL \*** dashboards.
     1. Select `cf-*` from the **Deployment** drop-down menu.
     1. Select `mysql` from the **Host** drop-down menu.
 
-1. To track metrics from external MySQL databases used by PCF Elastic Runtime:
+1. To track metrics from external MySQL databases used by Pivotal Platform Elastic Runtime:
     1. Open the **Service - MySQL \*** dashboards.
     1. Select `cf-*` from the **Deployment** drop-down menu.
     1. Select `cloud_controller` from the **Host** drop-down menu.
 
-1. To track metrics from the MySQL for PCF tile:
+1. To track metrics from the MySQL for Pivotal Platform tile:
     1. Open the **Service - MySQL \*** dashboards.
     1. Select `p-mysql-*` from the **Deployment** drop-down menu.
     1. Select `mysql` from the **Host** drop-down menu.
@@ -38,7 +38,7 @@ This topic describes how to use dashboards for third-party services.
     1. Select `service-instance_*` from the **Deployment** drop-down menu.
     1. Select `postgresql` from the **Host** drop-down menu.
 
-1. To track metrics from an internal PostgreSQL databases used by PCF Elastic Runtime:
+1. To track metrics from an internal PostgreSQL databases used by Pivotal Platform Elastic Runtime:
     1. Open the **Service - PostgreSQL Overview** dashboard.
     1. Select `cf-*` from the **Deployment** drop-down menu.
     1. Select `postgres` from the **Host** drop-down menu.
@@ -52,7 +52,7 @@ This topic describes how to use dashboards for third-party services.
 
 <%= image_tag("images/rabbitmq-dashboard-header.png") %>
 
-1. To track metrics from the RabbitMQ for PCF tile:
+1. To track metrics from the RabbitMQ for Pivotal Platform tile:
     1. Open the **Service - RabbitMQ \*** dashboards.
     1. Select `p-rabbitmq-*` from the **Deployment** drop-down menu.
     1. Select `rabbitmq-broker` from the **Host** drop-down menu.
@@ -66,7 +66,7 @@ This topic describes how to use dashboards for third-party services.
 
 <%= image_tag("images/redis-dashboard-header.png") %>
 
-1. To track metrics from the Redis for PCF tile:
+1. To track metrics from the Redis for Pivotal Platform tile:
     1. Open the **Service - Redis Overview** dashboard.
     1. Select `p-redis-*` from the **Deployment** drop-down menu.
     1. Select `cf-redis-broker` or `dedicated-node` from the **Host** drop-down menu.
@@ -83,7 +83,7 @@ This topic describes how to use dashboards for third-party services.
 
 <%= image_tag("images/elasticsearch-dashboard-header.png") %>
 
-1. To track metrics from the Altoros Log Search for PCF tile:
+1. To track metrics from the Altoros Log Search for Pivotal Platform tile:
     1. Open the **Service - Elasticsearch Overview** dashboard.
     1. Select `logsearch-*` from the **Deployment** drop-down menu.
     1. Select `elasticsearch_data` or `cluster_monitor` from the **Host** drop-down menu.
@@ -111,7 +111,7 @@ This topic describes how to use dashboards for third-party services.
 To configure Concourse Web Worker (also called [Air Traffic Control (ATC)](https://github.com/concourse/atc)) to transfer metrics to Altoros Heartbeat, do the following:
 
 1. Find the IP address of the Collectd virtual machine that is used to monitor external services:
-    1. From the Altoros Heartbeat for PCF tile, select the **Status** tab.
+    1. From the Altoros Heartbeat for Pivotal Platform tile, select the **Status** tab.
     1. Scroll down to **Collectd VM to monitor external services** and copy the IP address in the **IPS** column.
     <%= image_tag("images/external-services-vm.png") %>
 
@@ -129,17 +129,17 @@ To configure Concourse Web Worker (also called [Air Traffic Control (ATC)](https
 
 <%= image_tag("images/haproxy-grafana-header.png") %>
 
-1. To track metrics from the HAProxy that is used by PCF Elastic Runtime:
+1. To track metrics from the HAProxy that is used by Pivotal Platform Elastic Runtime:
     1. Open the **CF HAProxy \*** dashboards.
     1. From the **Deployment** drop-down menu, select `cf-*`.
     1. From the **Host** drop-down menu, select `ha_proxy`.
 
-1. To track metrics from the HAProxy used by the RabbitMQ for PCF tile:
+1. To track metrics from the HAProxy used by the RabbitMQ for Pivotal Platform tile:
     1. Open the **CF HAProxy \*** dashboards.
     1. From the **Deployment** drop-down menu, select `p-rabbitmq-*`.
     1. From the **Host** drop-down menu, select `rabbitmq-haproxy`.
 
-1. To track metrics from the TCP Router (HAProxy), which is a part of the PCF Elastic Runtime:
+1. To track metrics from the TCP Router (HAProxy), which is a part of the Pivotal Platform Elastic Runtime:
     1. Open the **CF HAProxy \*** dashboards.
     1. From the **Deployment** drop-down menu, select `cf-*`.
     1. From the **Host** drop-down menu, select `tcp_router`.
